--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -50,9 +50,9 @@ separator-foreground = ${colors.disabled}
 
 font-0 = "JetBrainsMonoNL Nerd Font Mono:size=10;2"
 
-modules-left = playerctl
-modules-right = pulseaudio memory cpu cpu_temp date systray
-modules-center = xworkspaces
+modules-left = xworkspaces playerctl
+modules-right = systray pulseaudio memory cpu cpu_temp date
+# modules-center = xworkspaces
 cursor-click = pointer
 cursor-scroll = ns-resize
 
